# Bankeasy

./: .gitignore  Dockerfile  Donut.ipynb  Donut_pl.ipynb  README.md  app.py  docker_build.sh  pyproject.toml
scripts/: predict.py
utils/: donut_utils.py
