[tool.poetry]
name = "docai"
version = "0.1.0"
description = ""
authors = ["enandhag <enandhag@ford.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
transformers = {extras = ["sentencepiece"], version = "^4.25.1"}
datasets = "^2.8.0"
torch = "^1.13.1"
gradio = "^3.14.0"
numpy = "^1.24.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
